fix bug if responsive in marketing section with right extra space

--- a/src/app/marketing/marketing.module.css
+++ b/src/app/marketing/marketing.module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  overflow-x: hidden;
   height: auto;
   justify-content: center;
   align-items: center;
